--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 1월 5일</li>
+                    <li>2025년 1월 20일</li>
                 </ul>
             </blockquote>
         </header>
@@ -24,7 +24,8 @@
             
             <h3>1월</h3>
             <ul>
-                <li>비트 매도 날짜: 미정</li>
+                <li>비트 매도 날짜: 15일</li>
+                <li>비트 매도 수량: 총 보유량의 10%</li>
                 <li>매수 날짜: 미정</li>
                 <li>매수 예정 알트
                     <ul>
@@ -49,6 +50,13 @@
 
             <h3>4월</h3>
             <h3>5월</h3>
+            <h3>6월</h3>
+            <h3>7월</h3>
+            <ul>
+                <li>비트 매도 날짜: 미정</li>
+                <li>알트 매수 없습니다.</li>
+            </ul>
+
         </main>
 
         <hr />
