--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 1월 20일</li>
+                    <li>2025년 2월 1일</li>
                 </ul>
             </blockquote>
         </header>
@@ -26,12 +26,25 @@
             <ul>
                 <li>비트 매도 날짜: 15일</li>
                 <li>비트 매도 수량: 총 보유량의 10%</li>
-                <li>매수 날짜: 미정</li>
-                <li>매수 예정 알트
+                <li>매수한 알트
                     <ul>
-                        <li>솔라나</li>
-                        <li>수이</li>
-                        <li>온도파이낸스</li>
+                        <li>솔라나: 1000 달러 어치</li>
+                        <li>수이: 500 달러 어치</li>
+                        <li>온도파이낸스: 500 달러 어치</li>
+                        <li>오피셜 트럼프: 100 달러 어치</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h3>2월</h3>
+            <ul>
+                <li>비트 매도 없음</li>
+                <li>매수한 알트
+                    <ul>
+                        <li>수이: 300 달러 어치</li>
+                        <li>??? 매수 예정</li>
+                        <li>파일코인 매수 예정</li>
+                        <li>베이비도지 매수 예정</li>
                     </ul>
                 </li>
             </ul>
@@ -39,10 +52,9 @@
             <h3>3월</h3>
             <ul>
                 <li>비트 매도 날짜: 미정</li>
-                <li>매수 날짜: 미정</li>
+                <li>비트 매도 수량: 총 보유량의 10%</li>
                 <li>매수 예정 알트
                     <ul>
-                        <li>수이</li>
                         <li><ins>추가 업데이트 예정</ins></li>
                     </ul>
                 </li>
