--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 2월 1일</li>
+                    <li>2025년 2월 4일</li>
                 </ul>
             </blockquote>
         </header>
@@ -42,9 +42,15 @@
                 <li>매수한 알트
                     <ul>
                         <li>수이: 300 달러 어치</li>
-                        <li>??? 매수 예정</li>
-                        <li>파일코인 매수 예정</li>
-                        <li>베이비도지 매수 예정</li>
+                        <li>솔라나: 500 달러 어치</li>
+                        <li>플룸 Plume: 100 달러 어치</li>
+                        <li>리플: 300 달러 어치</li>
+                        <li>파일코인: 100 달러 어치</li>
+                        <li>베이비도지: 100 달러 어치</li>
+                        <li>온도파이낸스: 200 달러 어치</li>
+                        <li>셀레스티아: 100 달러 어치</li>
+                        <li>인젝티브: 100 달러 어치</li>
+                        <li>페치 ai: 100 달러 어치</li>
                     </ul>
                 </li>
             </ul>
