--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main role="main">
             <section id="text">
-                <header><h1>2025년 매도 계획</h1></header>
+                <header><h1>2025년 매수매도 진행상황</h1></header>
             </section>
             
             <h3>1월</h3>
