--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 2월 12일</li>
+                    <li>2025년 3월 1일</li>
                 </ul>
             </blockquote>
         </header>
@@ -42,10 +42,10 @@
                 <li>매수한 알트
                     <ul>
                         <li>이더리움: 200 달러 어치</li>
-                        <li>수이: 500 달러 어치</li>
-                        <li>솔라나: 500 달러 어치</li>
+                        <li>수이: 700 달러 어치</li>
+                        <li>솔라나: 800 달러 어치</li>
                         <li>플룸 Plume: 200 달러 어치</li>
-                        <li>리플: 450 달러 어치</li>
+                        <li>리플: 650 달러 어치</li>
                         <li>파일코인: 100 달러 어치</li>
                         <li>베이비도지: 100 달러 어치</li>
                         <li>온도파이낸스: 400 달러 어치</li>
@@ -59,11 +59,13 @@
 
             <h3>3월</h3>
             <ul>
-                <li>비트 매도 날짜: 미정</li>
+                <li>비트 매도 날짜: 3월 말</li>
                 <li>비트 매도 수량: 총 보유량의 10%</li>
                 <li>매수 예정 알트
                     <ul>
-                        <li><ins>추가 업데이트 예정</ins></li>
+                        <li><ins>이더리움</ins></li>
+                        <li><ins>리플</ins></li>
+                        <li><ins>온도파이낸스</ins></li>
                     </ul>
                 </li>
             </ul>
