--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1">
         <title>코인니엘 게시판</title>
         <link rel="stylesheet" type="text/css" href="https://vanillacss.com/vanilla.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6562345681021466" crossorigin="anonymous"></script>
     </head>
     <body>
         <header role="banner">
@@ -12,7 +13,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 3월 1일</li>
+                    <li>2025년 3월 6일</li>
                 </ul>
             </blockquote>
         </header>
@@ -61,16 +62,25 @@
             <ul>
                 <li>비트 매도 날짜: 3월 말</li>
                 <li>비트 매도 수량: 총 보유량의 10%</li>
-                <li>매수 예정 알트
+                <li>매수한 알트
                     <ul>
-                        <li><ins>이더리움</ins></li>
-                        <li><ins>리플</ins></li>
-                        <li><ins>온도파이낸스</ins></li>
+                        <li>온도파이낸스: 200 달러 어치</li>
+                        <li>솔라나: 200 달러 어치</li>
                     </ul>
                 </li>
             </ul>
 
             <h3>4월</h3>
+            <ul>
+                <li>비트 매도 날짜: 4월 말</li>
+                <li>비트 매도 수량: 총 보유량의 10%</li>
+                <li>매수 예정 알트
+                    <ul>
+                        <li><ins>이더리움</ins></li>
+                    </ul>
+                </li>
+            </ul>
+
             <h3>5월</h3>
             <h3>6월</h3>
             <h3>7월</h3>
