--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 
             <h3>3월</h3>
             <ul>
-                <li>비트 매도 날짜: 3월 말</li>
-                <li>비트 매도 수량: 총 보유량의 10%</li>
+                <li>비트 매도 없음</li>
                 <li>매수한 알트
                     <ul>
                         <li>온도파이낸스: 200 달러 어치</li>
@@ -72,16 +71,24 @@
 
             <h3>4월</h3>
             <ul>
-                <li>비트 매도 날짜: 4월 말</li>
-                <li>비트 매도 수량: 총 보유량의 10%</li>
+                <li>비트 매도 날짜: 25일</li>
+                <li>비트 매도 수량: 총 보유량의 9%</li>
                 <li>매수 예정 알트
                     <ul>
                         <li><ins>이더리움</ins></li>
+                        <li><ins>수이</ins></li>
+                        <li><ins>온도파이낸스</ins></li>
+                        <li><ins>솔라나</ins></li>
                     </ul>
                 </li>
             </ul>
 
             <h3>5월</h3>
+            <ul>
+                <li>비트 매도 날짜: 중순쯤</li>
+                <li>비트 매도 수량: 총 보유량의 9%</li>
+            </ul>
+
             <h3>6월</h3>
             <h3>7월</h3>
             <ul>
