--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 4월 29일</li>
+                    <li>2025년 5월 25일</li>
                 </ul>
             </blockquote>
         </header>
@@ -72,29 +72,47 @@
             <ul>
                 <li>비트 매도 날짜: 25일</li>
                 <li>비트 매도 수량: 총 보유량의 9%</li>
-                <li>매수 예정 알트
-                    <ul>
-                        <li><ins>이더리움</ins></li>
-                        <li><ins>수이</ins></li>
-                        <li><ins>온도파이낸스</ins></li>
-                        <li><ins>솔라나</ins></li>
-                    </ul>
-                </li>
+                <li>매수한 알트 - 없음</li>
             </ul>
 
             <h3>5월</h3>
             <ul>
                 <li>비트 매도 날짜: 중순쯤</li>
                 <li>비트 매도 수량: 총 보유량의 9%</li>
+                <li>매수한 알트
+                    <ul>
+                        <li>온도파이낸스: 1000 달러 어치</li>
+                        <li>수이: 1000 달러 어치</li>
+                        <li>XRP: 1000 달러 어치</li>
+                    </ul>
+                </li>
             </ul>
 
             <h3>6월</h3>
+            <ul>
+                <li>비트 매도 날짜: 중순쯤</li>
+                <li>비트 매도 수량: 총 보유량의 9%</li>
+                <li>매수 예정 알트
+                    <ul>
+                        <li><ins>인젝티브</ins></li>
+                        <li><ins>셀레스티아</ins></li>
+                        <li><ins>체인링크</ins></li>
+                    </ul>
+                </li>
+            </ul>
+                
             <h3>7월</h3>
+            <ul>
+                <li>비트 매도 날짜: 미정</li>
+            </ul>
+
+            <h3>8월</h3>
             <ul>
                 <li>비트 매도 날짜: 미정</li>
                 <li>알트 매수 없습니다.</li>
             </ul>
-
+            <h3>9월</h3>
+            <h3>10월</h3>
         </main>
 
         <hr />
