--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>최대한 자주 업데이트 하도록 하겠습니다!</p>
                 <h3>업데이트 날짜:</h3>
                 <ul>
-                    <li>2025년 5월 25일</li>
+                    <li>2025년 6월 07일</li>
                 </ul>
             </blockquote>
         </header>
@@ -77,13 +77,15 @@
 
             <h3>5월</h3>
             <ul>
-                <li>비트 매도 날짜: 중순쯤</li>
-                <li>비트 매도 수량: 총 보유량의 9%</li>
+                <li>비트 매도 없음</li>
                 <li>매수한 알트
                     <ul>
                         <li>온도파이낸스: 1000 달러 어치</li>
                         <li>수이: 1000 달러 어치</li>
                         <li>XRP: 1000 달러 어치</li>
+                        <li>인젝티브: 200 달러 어치</li>
+                        <li>셀레스티아: 200 달러 어치</li>
+                        <li>플룸: 100 달러 어치</li>
                     </ul>
                 </li>
             </ul>
@@ -92,18 +94,24 @@
             <ul>
                 <li>비트 매도 날짜: 중순쯤</li>
                 <li>비트 매도 수량: 총 보유량의 9%</li>
-                <li>매수 예정 알트
+                <li>매수한 알트
                     <ul>
-                        <li><ins>인젝티브</ins></li>
-                        <li><ins>셀레스티아</ins></li>
-                        <li><ins>체인링크</ins></li>
+                        <li>버추얼프로토콜: 300 달러 어치</li>
                     </ul>
                 </li>
             </ul>
                 
             <h3>7월</h3>
             <ul>
-                <li>비트 매도 날짜: 미정</li>
+                <li>비트 매도 날짜: 중순쯤</li>
+                <li>비트 매도 수량: 총 보유량의 9%</li>
+                <li>매수 예정 알트
+                    <ul>
+                        <li><ins>체인링크</ins></li>
+                        <li><ins>인젝티브</ins></li>
+                        <li><ins>셀레스티아</ins></li>
+                    </ul>
+                </li>
             </ul>
 
             <h3>8월</h3>
